@@ -17,6 +17,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -32,6 +35,12 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 }
 
 //Dependencies versions
@@ -42,6 +51,10 @@ versions.lifecycle = '2.3.1'
 versions.glide = '4.12.0'
 versions.gson = '2.8.8'
 
+tasks.withType(Test) {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
+}
 
 dependencies {
     //Core
@@ -78,8 +91,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
+    // (Required) Writing and executing Unit Tests on the JUnit Platform
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
+
+    testImplementation 'io.mockk:mockk:1.12.0'
+    testImplementation "io.mockk:mockk-agent-jvm:1.12.0"
+
+    testImplementation "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
 }
